--- a/manifest.json
+++ b/manifest.json
@@ -1,5 +1,5 @@
 {
-    "name": "Anna Leushchenko",
+    "name": "John Aramburu",
     "short_name": "foxanna",
     "start_url": ".",
     "display": "standalone",
