--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
     "name": "John Aramburu",
-    "short_name": "foxanna",
+    "short_name": "John",
     "start_url": ".",
     "display": "standalone",
     "background_color": "#3C75A5",
